libmutexgear_la_includedir = \
  $(includedir)/mutexgear

libmutexgear_la_include_HEADERS = \
  _confvars.h \
  _llisttmpl.h \
  completion.h \
  config.h \
  constants.h \
  dlpslist.h \
  dlralist.h \
  maintlock.h \
  mutexgear.h \
  rwlock.h \
  toggle.h \
  utility.h \
  wheel.h


EXTRA_DIST = \
  completion.hpp \
  dlps_list.hpp \
  maint_mutex.hpp \
  parent_wrapper.hpp \
  shared_mutex.hpp \
  toggle.hpp \
  wheel.hpp \
  _confvars.h.in \
  _mtx_helpers.hpp

dist_libmutexgear_la_include_HEADERS = \
  _confvars.h


